[gd_scene format=3 uid="uid://c66mfmq3lvqwp"]

[ext_resource type="Script" uid="uid://h0dg5ddhwl83" path="res://UI/main_menu.gd" id="1_06t4h"]

[sub_resource type="Theme" id="Theme_rhts7"]

[node name="main menu" type="Node2D" unique_id=866770219]
script = ExtResource("1_06t4h")

[node name="Label" type="Label" parent="." unique_id=419788200]
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_colors/font_color = Color(0.48442358, 0.5360387, 0.3093149, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.7529412)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 6
theme_override_font_sizes/font_size = 200
text = "DAYO"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=1085539091]
offset_top = 300.0
offset_right = 1920.0
offset_bottom = 900.0
theme = SubResource("Theme_rhts7")

[node name="Main buttons" type="VBoxContainer" parent="CenterContainer" unique_id=875559782]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Arcade" type="Button" parent="CenterContainer/Main buttons" unique_id=722368645]
layout_mode = 2
theme_override_colors/font_color = Color(0.4862745, 0.5372549, 0.30980393, 1)
theme_override_font_sizes/font_size = 64
text = "Arcade
"

[node name="Vs mode" type="Button" parent="CenterContainer/Main buttons" unique_id=1989127080]
layout_mode = 2
theme_override_colors/font_color = Color(0.4862745, 0.5372549, 0.30980393, 1)
theme_override_font_sizes/font_size = 64
text = "Vs Mode
"

[node name="Training" type="Button" parent="CenterContainer/Main buttons" unique_id=1507538176]
layout_mode = 2
theme_override_colors/font_color = Color(0.4862745, 0.5372549, 0.30980393, 1)
theme_override_font_sizes/font_size = 64
text = "Training"

[node name="Options" type="Button" parent="CenterContainer/Main buttons" unique_id=1741161178]
layout_mode = 2
theme_override_colors/font_color = Color(0.4862745, 0.5372549, 0.30980393, 1)
theme_override_font_sizes/font_size = 64
text = "Options
"

[node name="Exit" type="Button" parent="CenterContainer/Main buttons" unique_id=668023182]
layout_mode = 2
theme_override_colors/font_color = Color(0.4862745, 0.5372549, 0.30980393, 1)
theme_override_font_sizes/font_size = 64
text = "Exit
"

[node name="Arcade menu" type="VBoxContainer" parent="." unique_id=2136860604]
visible = false
offset_left = 711.0
offset_top = 300.0
offset_right = 1211.0
offset_bottom = 741.0
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="Arcade menu" unique_id=1615108731]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 120
text = "Arcade menu"
horizontal_alignment = 1
autowrap_mode = 2

[node name="back" type="Button" parent="Arcade menu" unique_id=1795908748]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.4862745, 0.5372549, 0.30980393, 1)
theme_override_font_sizes/font_size = 64
text = "Back

"

[node name="Vs Mode menu" type="VBoxContainer" parent="." unique_id=83600931]
visible = false
offset_top = 300.0
offset_right = 1980.0
offset_bottom = 741.0
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="Vs Mode menu" unique_id=426535881]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 120
text = "Vs mode menu"
horizontal_alignment = 1
autowrap_mode = 2

[node name="back" type="Button" parent="Vs Mode menu" unique_id=1376747734]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.4862745, 0.5372549, 0.30980393, 1)
theme_override_font_sizes/font_size = 64
text = "Back

"

[node name="Training menu" type="VBoxContainer" parent="." unique_id=1738750883]
visible = false
offset_top = 300.0
offset_right = 1980.0
offset_bottom = 741.0
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="Training menu" unique_id=2066873006]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 120
text = "Training menu"
horizontal_alignment = 1
autowrap_mode = 2

[node name="back" type="Button" parent="Training menu" unique_id=1442218822]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.4862745, 0.5372549, 0.30980393, 1)
theme_override_font_sizes/font_size = 64
text = "Back

"

[node name="Options menu" type="VBoxContainer" parent="." unique_id=277755898]
visible = false
offset_left = 755.0
offset_top = 400.0
offset_right = 1172.0
offset_bottom = 880.0
theme_override_constants/separation = 12

[node name="Volume" type="HSlider" parent="Options menu" unique_id=1203408309]
custom_minimum_size = Vector2(232, 80)
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="Label" type="Label" parent="Options menu/Volume" unique_id=245953764]
custom_minimum_size = Vector2(135, 0)
layout_mode = 0
offset_left = 10.0
offset_top = -84.0
offset_right = 410.0
offset_bottom = 95.0
theme_override_font_sizes/font_size = 48
text = "MASTER VOL."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Volume2" type="HSlider" parent="Options menu" unique_id=191794910]
custom_minimum_size = Vector2(232, 80)
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="Label" type="Label" parent="Options menu/Volume2" unique_id=1090669381]
custom_minimum_size = Vector2(135, 0)
layout_mode = 0
offset_left = 44.0
offset_top = -49.0
offset_right = 388.0
offset_bottom = 130.0
theme_override_font_sizes/font_size = 48
text = "MUSIC VOL.
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Volume3" type="HSlider" parent="Options menu" unique_id=239611350]
custom_minimum_size = Vector2(232, 80)
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="Label" type="Label" parent="Options menu/Volume3" unique_id=863198310]
custom_minimum_size = Vector2(135, 0)
layout_mode = 0
offset_left = 43.0
offset_top = -49.0
offset_right = 387.0
offset_bottom = 130.0
theme_override_font_sizes/font_size = 48
text = "SFX VOL.
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CheckBox" type="CheckBox" parent="Options menu" unique_id=195804191]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "FULLSCREEN
"

[node name="back" type="Button" parent="Options menu" unique_id=376479878]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.4862745, 0.5372549, 0.30980393, 1)
theme_override_font_sizes/font_size = 64
text = "back

"

[node name="ColorRect" type="ColorRect" parent="." unique_id=533036827]
z_index = -4096
offset_left = -170.0
offset_top = -103.0
offset_right = 2094.0
offset_bottom = 1200.0
mouse_filter = 2
color = Color(0.2762482, 0.0006326306, 0.757038, 1)

[connection signal="pressed" from="CenterContainer/Main buttons/Arcade" to="." method="_on_arcade_pressed"]
[connection signal="pressed" from="CenterContainer/Main buttons/Vs mode" to="." method="_on_vs_mode_pressed"]
[connection signal="pressed" from="CenterContainer/Main buttons/Training" to="." method="_on_training_pressed"]
[connection signal="pressed" from="CenterContainer/Main buttons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="CenterContainer/Main buttons/Exit" to="." method="_on_exit_pressed"]
