extends Node2D

var UI: int = 1

func _on_options_pressed() -> void:
	pass # Replace with function body.


func _on_training_pressed() -> void:
	pass # Replace with function body.


func _on_vs_mode_pressed() -> void:
	pass # Replace with function body.


func _on_arcade_pressed() -> void:
	pass # Replace with function body.


func _on_exit_pressed() -> void:
	pass # Replace with function body.
